
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct sockaddr {int dummy; } ;
struct in_addr {int dummy; } ;
struct TYPE_5__ {scalar_t__ h_addr; } ;
struct TYPE_4__ {int sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;


 int AF_INET ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 TYPE_2__* gethostbyname (char*) ;
 TYPE_2__* he ;
 int htons (int ) ;
 int memset (int *,char,int) ;
 int perror (char*) ;
 int port ;
 int printf (char*) ;
 int socket (int ,int ,int ) ;
 TYPE_1__ their_addr ;

int konekt(char *addr)
{
int sock;

he=gethostbyname(addr);
if(he==((void*)0))
{
printf("Unknow host!\nexiting...");
return -1;
}
if ((sock = socket(AF_INET, SOCK_STREAM, 0)) == -1)
{
perror("socket");
return -2;
}

their_addr.sin_family = AF_INET;
their_addr.sin_port = htons(port);
their_addr.sin_addr = *((struct in_addr *)he->h_addr);
memset(&(their_addr.sin_zero), '\0', 8);
if (connect(sock, (struct sockaddr *)&their_addr,
sizeof(struct sockaddr)) == -1)
{
perror("connect");
return -1;
}

return sock;
}
